--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.3",
     "react-history": "^0.18.2",
+    "react-native": "^0.63.3",
     "react-native-fs": "^2.16.6",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
